--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -28,7 +28,9 @@
         <input type="checkbox" checked id="sampleEnable">
         <span>Ins</span>
       </label>
+      <button id="sampleScrollLeft">&lt;</button>
       <form id="sampleList" class="hflex flex-grow hscrollable" autocomplete="off"></form>
+      <button id="sampleScrollRight">&gt;</button>
     </div>
     <div class="hflex">
       <label class="label-button">
