--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -16,81 +16,83 @@
         <img class="icon" src="assets/eraser.svg">
       </button>
     </div>
-    <div class="hflex">
+    <div style="display: grid; grid-template-columns: auto 1fr;">
       <label class="label-button">
         <input type="checkbox" checked id="pitchEnable">
-        <span>Pit</span>
+        <span>P</span>
       </label>
       <input class="flex-grow" type="range" min="0" max="59" value="36" id="pitchInput">
-    </div>
-    <div class="hflex">
+
       <label class="label-button">
         <input type="checkbox" checked id="sampleEnable">
-        <span>Ins</span>
+        <span>I</span>
       </label>
-      <button id="sampleScrollLeft">&lt;</button>
-      <form id="sampleList" class="hflex flex-grow hscrollable" autocomplete="off"></form>
-      <button id="sampleScrollRight">&gt;</button>
-    </div>
-    <div class="hflex">
+      <div class="hflex">
+        <button id="sampleScrollLeft">&lt;</button>
+        <form id="sampleList" class="hflex flex-grow hscrollable" autocomplete="off"></form>
+        <button id="sampleScrollRight">&gt;</button>
+      </div>
+
       <label class="label-button">
         <input type="checkbox" id="effectEnable">
-        <span>Eff</span>
+        <span>E</span>
       </label>
-      <select id="effectSelect">
-        <option>0: Arpeggio</option>
-        <option>1: Port Up</option>
-        <option>2: Port Down</option>
-        <option>3: Tone Port</option>
-        <option>4: Vibrato</option>
-        <option>5: Volslide+Port</option>
-        <option>6: Volslide+Vib</option>
-        <option>7: Tremolo</option>
-        <option>8: Panning</option>
-        <option>9: Offset</option>
-        <option>A: Volume Slide</option>
-        <option>B: Position Jump</option>
-        <option selected>C: Volume</option>
-        <option>D: Pattern Break</option>
-        <option>E: Extended</option>
-        <option>F: Tempo</option>
-      </select>
-      <select id="param0Select">
-        <option>0</option>
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-        <option>6</option>
-        <option>7</option>
-        <option>8</option>
-        <option>9</option>
-        <option>A</option>
-        <option>B</option>
-        <option>C</option>
-        <option>D</option>
-        <option>E</option>
-        <option>F</option>
-      </select>
-      <select id="param1Select">
-        <option>0</option>
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-        <option>6</option>
-        <option>7</option>
-        <option>8</option>
-        <option>9</option>
-        <option>A</option>
-        <option>B</option>
-        <option>C</option>
-        <option>D</option>
-        <option>E</option>
-        <option>F</option>
-      </select>
+      <div class="hflex">
+        <select id="effectSelect">
+          <option>0: Arpeggio</option>
+          <option>1: Port Up</option>
+          <option>2: Port Down</option>
+          <option>3: Tone Port</option>
+          <option>4: Vibrato</option>
+          <option>5: Volslide+Port</option>
+          <option>6: Volslide+Vib</option>
+          <option>7: Tremolo</option>
+          <option>8: Panning</option>
+          <option>9: Offset</option>
+          <option>A: Volume Slide</option>
+          <option>B: Position Jump</option>
+          <option selected>C: Volume</option>
+          <option>D: Pattern Break</option>
+          <option>E: Extended</option>
+          <option>F: Tempo</option>
+        </select>
+        <select id="param0Select">
+          <option>0</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+          <option>6</option>
+          <option>7</option>
+          <option>8</option>
+          <option>9</option>
+          <option>A</option>
+          <option>B</option>
+          <option>C</option>
+          <option>D</option>
+          <option>E</option>
+          <option>F</option>
+        </select>
+        <select id="param1Select">
+          <option>0</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+          <option>6</option>
+          <option>7</option>
+          <option>8</option>
+          <option>9</option>
+          <option>A</option>
+          <option>B</option>
+          <option>C</option>
+          <option>D</option>
+          <option>E</option>
+          <option>F</option>
+        </select>
+      </div>
     </div>
   </div>
 </template>
