Fix grid expanding

--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -16,7 +16,7 @@
         <img class="icon" src="assets/eraser.svg">
       </button>
     </div>
-    <div style="display: grid; grid-template-columns: auto 1fr;">
+    <div style="display: grid; grid-template-columns: auto minmax(0, 1fr)">
       <label class="label-button">
         <input type="checkbox" checked id="pitchEnable">
         <span>P</span>
