Scroll by octaves

--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -24,14 +24,14 @@
         <span>P</span>
       </label>
       <div class="hflex">
-        <button id="pianoScrollLeft">&lt;</button>
+        <button id="pianoLeft">&lt;</button>
         <form id="piano" class="vflex flex-grow hscrollable" autocomplete="off">
           <div class="hflex" id="blackKeys">
             <div class="keypad-half-key"></div>
           </div>
           <div class="hflex" id="whiteKeys"></div>
         </form>
-        <button id="pianoScrollRight">&gt;</button>
+        <button id="pianoRight">&gt;</button>
       </div>
 
       <label class="label-button">
@@ -39,9 +39,9 @@
         <span>I</span>
       </label>
       <div class="hflex">
-        <button id="sampleScrollLeft">&lt;</button>
+        <button id="sampleLeft">&lt;</button>
         <form id="sampleList" class="hflex flex-grow hscrollable" autocomplete="off"></form>
-        <button id="sampleScrollRight">&gt;</button>
+        <button id="sampleRight">&gt;</button>
       </div>
 
       <label class="label-button">
