--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -51,6 +51,7 @@ body {
 }
 
 button,
+select,
 .label-button span {
     display: inline-flex;
     justify-content: center;
@@ -66,6 +67,7 @@ button,
 }
 
 button:active,
+select:active,
 .label-button :active + span {
     background: #ccc;
 }
