Sample preview image

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -28,6 +28,7 @@
         </div>
       </div>
     </div>
+    <canvas id="wavePreview" width="1024" height="256"></canvas>
     <div class="vflex">
       Loop:
       <input id="loopStart" type="range" min="0" autocomplete="off">
