--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -30,8 +30,11 @@
     </div>
     <div class="vflex wave-container">
       <canvas id="wavePreview" width="1024" height="256"></canvas>
-      <div id="loopStartMark" class="wave-mark"></div>
-      <div id="loopEndMark" class="wave-mark"></div>
+      <div id="selectMarkA" class="wave-mark hide"></div>
+      <div id="selectMarkB" class="wave-mark hide"></div>
+      <div id="selectRange" class="wave-range hide"></div>
+      <div id="loopStartMark" class="wave-mark wave-loop hide"></div>
+      <div id="loopEndMark" class="wave-mark wave-loop hide"></div>
     </div>
     <div class="vflex">
       Loop:
