--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -170,11 +170,25 @@ tbody tr:nth-child(16n+1) th {
 .wave-container {
     position: relative;
 }
+.wave-container canvas {
+    touch-action: none;
+}
 
-.wave-mark {
+.wave-mark,
+.wave-range {
     position: absolute;
-    width: 0px;
     height: 100%;
-    padding: 0 1px;
     background: #44f;
+    pointer-events: none;
+}
+.wave-mark {
+    width: 0px;
+    padding: 0 1px;
+}
+.wave-range {
+    opacity: 0.2;
+}
+
+.wave-loop {
+    background: #2d8;
 }
