More sample editing operations

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -42,8 +42,13 @@
       <input id="loopEnd" type="range" min="0" autocomplete="off">
     </div>
     <div class="hflex">
+      <button id="setLoop">Set Loop</button>
       <button id="clearLoop">Clear Loop</button>
+      <button id="selectLoop">Select Loop</button>
+    </div>
+    <div class="hflex">
       <button id="trim">Trim</button>
+      <button id="delete">Delete</button>
     </div>
     <button id="jam">Listen</button>
   </div>
