Add select menu

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -42,9 +42,14 @@
       <input id="loopEnd" type="range" min="0" autocomplete="off">
     </div>
     <div class="hflex">
+      <select id="selectMenu">
+        <option selected disabled hidden>Select</option>
+        <option value="all">All</option>
+        <option value="none">None</option>
+        <option value="loop">Loop</option>
+      </select>
       <button id="setLoop">Set Loop</button>
       <button id="clearLoop">Clear Loop</button>
-      <button id="selectLoop">Select Loop</button>
     </div>
     <div class="hflex">
       <button id="trim">Trim</button>
