Only create sample edit when selected

--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -5,7 +5,6 @@
       <button id="addSample">+</button>
       <button id="delSample">X</button>
     </div>
-    </select>
-    <sample-edit></sample-edit>
+    <div id="sampleEditContainer" class="vflex flex-grow"></div>
   </div>
 </template>
