Wave copy/paste

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -51,7 +51,9 @@
       <select id="editMenu">
         <option selected disabled hidden>Edit</option>
         <option value="trim">Trim</option>
-        <option value="delete">Delete</option>
+        <option value="cut">Cut</option>
+        <option value="copy">Copy</option>
+        <option value="paste">Paste</option>
       </select>
       <select id="loopMenu">
         <option selected disabled hidden>Loop</option>
