--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -60,6 +60,10 @@
         <option value="set">Set</option>
         <option value="clear">Clear</option>
       </select>
+      <select id="effectMenu">
+        <option selected disabled hidden>Effect</option>
+        <option value="amplify">Amplify</option>
+      </select>
     </div>
     <button id="jam">Listen</button>
   </div>
