--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -28,13 +28,15 @@
         </div>
       </div>
     </div>
-    <div class="vflex wave-container">
-      <canvas id="wavePreview" width="1024" height="256"></canvas>
-      <div id="selectMarkA" class="wave-mark wave-select hide"></div>
-      <div id="selectMarkB" class="wave-mark wave-select hide"></div>
-      <div id="selectRange" class="wave-range wave-select hide"></div>
-      <div id="loopStartMark" class="wave-mark wave-loop hide"></div>
-      <div id="loopEndMark" class="wave-mark wave-loop hide"></div>
+    <div id="waveEdit" class="vflex wave-edit">
+      <div class="vflex wave-container">
+        <canvas id="wavePreview" width="1024" height="256"></canvas>
+        <div id="selectMarkA" class="wave-mark wave-select hide"></div>
+        <div id="selectMarkB" class="wave-mark wave-select hide"></div>
+        <div id="selectRange" class="wave-range wave-select hide"></div>
+        <div id="loopStartMark" class="wave-mark wave-loop hide"></div>
+        <div id="loopEndMark" class="wave-mark wave-loop hide"></div>
+      </div>
     </div>
     <div class="vflex">
       Loop:
