Insert/Delete buttons

--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -17,6 +17,12 @@
       <button id="clear">
         <img class="icon" src="assets/eraser.svg">
       </button>
+      <button id="insert">
+        <img class="icon" src="assets/arrow-expand-down.svg">
+      </button>
+      <button id="delete">
+        <img class="icon" src="assets/backspace-outline.svg">
+      </button>
     </div>
     <div style="display: grid; grid-template-columns: auto minmax(0, 1fr)">
       <label class="label-button">
