Button to write effect only

--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -109,6 +109,11 @@
           <option>E</option>
           <option>F</option>
         </select>
+
+        <div class="flex-grow"></div>
+        <button id="writeEffect">
+          <img class="icon" src="assets/keyboard-return.svg">
+        </button>
       </div>
     </div>
   </div>
