--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -7,8 +7,12 @@
     <div class="hflex">
       Channels:&nbsp;
       <output id="channelCount"></output>
-      <button id="addChannels">+</button>
-      <button id="delChannels">-</button>
+      <button id="delChannels">
+        <img class="icon" src="assets/minus.svg">
+      </button>
+      <button id="addChannels">
+        <img class="icon" src="assets/plus.svg">
+      </button>
     </div>
     <div class="hflex">
       Samples:&nbsp;
