--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -2,8 +2,12 @@
   <div class="vflex flex-grow">
     <div class="hflex">
       <select id="sampleSelect" class="flex-grow"></select>
-      <button id="addSample">+</button>
-      <button id="delSample">X</button>
+      <button id="addSample">
+        <img class="icon" src="assets/plus.svg">
+      </button>
+      <button id="delSample">
+        <img class="icon" src="assets/close.svg">
+      </button>
     </div>
     <div id="sampleEditContainer" class="vflex flex-grow"></div>
   </div>
