--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -73,7 +73,8 @@ select:active,
     background: #ccc;
 }
 
-.label-button :checked + span {
+.label-button :checked + span,
+.show-checked {
     background: #cdf;
 }
 
@@ -97,6 +98,16 @@ label {
 select {
     appearance: menulist-button;
     -webkit-appearance: menulist-button;
+}
+
+/* sequence edit */
+
+.seq-button {
+    width: 30pt;
+}
+.seq-button span {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 /* pattern table */
