--- a/templates/PatternTable.html
+++ b/templates/PatternTable.html
@@ -1,6 +1,6 @@
 <template id="patternTable">
   <div class="vflex flex-grow">
-    <div class="hscrollable vscrollable flex-grow" id="patternScroll">
+    <div id="patternScroll" class="hscrollable vscrollable flex-grow">
       <div class="pattern-table-space"></div>
       <table>
         <thead>
