--- a/templates/PlaybackControls.html
+++ b/templates/PlaybackControls.html
@@ -14,11 +14,11 @@
         <img class="icon" src="assets/pause.svg">
       </button>
       <label class="label-button">
-        <input type="checkbox" id="patternLoop">
+        <input id="patternLoop" type="checkbox">
         <span><img class="icon" src="assets/repeat-variant.svg"></span>
       </label>
       <label class="label-button">
-        <input type="checkbox" checked id="follow">
+        <input id="follow" type="checkbox" checked>
         <span><img class="icon" src="assets/format-indent-increase.svg"></span>
       </label>
       <div class="flex-grow"></div>
@@ -29,11 +29,11 @@
     <div class="hflex">
       <label>
         Tempo:
-        <input class="small-input" type="number" value="125" id="tempo" autocomplete="off">
+        <input id="tempo" type="number" class="small-input" value="125" autocomplete="off">
       </label>
       <label>
         Speed:
-        <input class="small-input" type="number" value="6" id="speed" autocomplete="off">
+        <input id="speed" type="number" class="small-input" value="6" autocomplete="off">
       </label>
     </div>
   </div>
