Use grids for properties

--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -24,7 +24,7 @@
         <img class="icon" src="assets/backspace-outline.svg">
       </button>
     </div>
-    <div class="cell-entry-grid">
+    <div class="properties-grid">
       <label class="label-button">
         <input id="pitchEnable" type="checkbox" checked>
         <span>P</span>
