--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -100,6 +100,14 @@ select {
     -webkit-appearance: menulist-button;
 }
 
+/* grid */
+
+.properties-grid {
+    display: grid;
+    grid-template-columns: auto minmax(0, 1fr);
+    align-items: center;
+}
+
 /* sequence edit */
 
 .seq-button {
@@ -165,11 +173,6 @@ tbody tr:nth-child(16n+1) th {
 }
 
 /* cell entry */
-
-.cell-entry-grid {
-    display: grid;
-    grid-template-columns: auto minmax(0, 1fr);
-}
 
 .keypad-key {
     width: 24pt;
