--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -1,10 +1,5 @@
 <template id="sampleEdit">
   <div class="vflex">
-    <div class="hflex">
-      Sample&nbsp;
-      <output id="number"></output>
-    </div>
-
     <div class="properties-grid">
       <span>Name:&nbsp;</span>
       <div class="hflex">
@@ -24,11 +19,14 @@
       </div>
 
       <span class="hflex">Wave file:&nbsp;</span>
-      <div class="vflex">
-        <input id="file" type="file" accept="audio/*" autocomplete="off">
+      <div class="hflex">
+        <label class="label-button">
+          <input id="file" type="file" accept="audio/*" autocomplete="off">
+          <span><img class="icon" src="assets/folder-open.svg"></span>
+        </label>
         <div class="hflex">
           Resample:
-          <input id="sampleRate" type="number" value="16574.27">
+          <input id="sampleRate" type="number" class="med-input" value="16574.27">
         </div>
       </div>
     </div>
