Move tempo/speed to Sequence tab

--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -23,6 +23,7 @@
     </div>
     <div id="sequence" class="vflex flex-grow hide">
       <sequence-edit></sequence-edit>
+      <playback-status></playback-status>
       <pattern-table></pattern-table>
     </div>
     <div id="samples" class="vflex flex-grow hide">
