--- a/templates/PlaybackStatus.html
+++ b/templates/PlaybackStatus.html
@@ -1,11 +1,12 @@
 <template id="playbackStatus">
   <div class="hflex">
     <label>
-      Tempo:
+      Tempo:&nbsp;
       <input id="tempo" type="number" class="small-input" value="125" autocomplete="off">
     </label>
+    &nbsp;
     <label>
-      Speed:
+      Speed:&nbsp;
       <input id="speed" type="number" class="small-input" value="6" autocomplete="off">
     </label>
   </div>
