--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -24,10 +24,9 @@
           <input id="file" type="file" accept="audio/*" autocomplete="off">
           <span><img class="icon" src="assets/folder-open.svg"></span>
         </label>
-        <div class="hflex">
-          Resample:
-          <input id="sampleRate" type="number" class="med-input" value="16574.27">
-        </div>
+        &nbsp;
+        Resample:&nbsp;
+        <input id="sampleRate" type="number" class="med-input" value="16574.27">
       </div>
     </div>
 
