New module button

--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -1,5 +1,8 @@
 <template id="fileToolbar">
   <div class="hflex">
+    <button id="newModule">
+      <img class="icon" src="assets/file-plus-outline.svg">
+    </button>
     <label class="label-button">
       <input id="fileSelect" type="file" autocomplete="off">
       <span><img class="icon" src="assets/folder-open.svg"></span>
