Add fade effects

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -67,6 +67,8 @@
       <select id="effectMenu">
         <option selected disabled hidden>Effect</option>
         <option value="amplify">Amplify</option>
+        <option value="fadeIn">Fade In</option>
+        <option value="fadeOut">Fade Out</option>
       </select>
     </div>
     <button id="jam">Listen</button>
