--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -7,11 +7,18 @@
       <input id="fileSelect" type="file" autocomplete="off">
       <span><img class="icon" src="assets/folder-open.svg"></span>
     </label>
-    <button id="fileDownload">
-      <img class="icon" src="assets/web.svg">
-    </button>
     <button id="fileSave">
       <img class="icon" src="assets/download.svg">
     </button>
+    <div class="flex-grow"></div>
+    <select id="demoMenu">
+      <option selected disabled hidden>Demo Files</option>
+      <option value="https://chroma.zone/share/space_debris.mod">space debris</option>
+      <option value="https://chroma.zone/share/migraine.mod">migraine</option>
+      <option value="https://chroma.zone/share/sammie-n_dropthefunk.mod">sammie-n dropthefunk</option>
+      <option value="https://chroma.zone/share/GSLINGER.MOD">GSLINGER</option>
+      <option value="https://chroma.zone/share/aceman_-_homunculi.mod">aceman - homunculi</option>
+      <option value="https://chroma.zone/share/celsius_-_too_fast.mod">celsius - too_fast</option>
+    </select>
   </div>
 </template>
