--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -18,7 +18,9 @@
   </form>
   <div id="appTabBody" class="vflex flex-grow">
     <div id="arrange" class="vflex flex-grow">
+      <div class="vspace"></div>
       <file-toolbar></file-toolbar>
+      <div class="vspace"></div>
       <module-properties></module-properties>
     </div>
     <div id="sequence" class="vflex flex-grow hide">
