--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -9,6 +9,7 @@
         <img class="icon" src="assets/close.svg">
       </button>
     </div>
+    <div class="vspace"></div>
     <div id="sampleEditContainer" class="vflex flex-grow"></div>
   </div>
 </template>
