--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -69,6 +69,7 @@
         <option value="amplify">Amplify</option>
         <option value="fadeIn">Fade In</option>
         <option value="fadeOut">Fade Out</option>
+        <option value="reverse">Reverse</option>
       </select>
     </div>
     <button id="jam">Listen</button>
