Input/output labels

--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -1,11 +1,11 @@
 <template id="moduleProperties">
   <div class="properties-grid">
-    <span>Title:&nbsp;</span>
+    <label for="title">Title:&nbsp;</label>
     <div class="hflex">
       <input id="title" maxlength="20" autocomplete="off">
     </div>
 
-    <span>Channels:&nbsp;</span>
+    <label for="channelCount">Channels:&nbsp;</label>
     <div class="hflex">
       <output id="channelCount"></output>
       &nbsp;
@@ -17,10 +17,10 @@
       </button>
     </div>
 
-    <span>Samples:&nbsp;</span>
+    <label for="sampleCount">Samples:&nbsp;</label>
     <output id="sampleCount"></output>
 
-    <span>Patterns:&nbsp;</span>
+    <label for="patternCount">Patterns:&nbsp;</label>
     <div class="hflex">
       <output id="patternCount"></output>
       &nbsp;
@@ -29,10 +29,10 @@
       </button>
     </div>
 
-    <span>Length:&nbsp;</span>
+    <label for="sequenceCount">Length:&nbsp;</label>
     <output id="sequenceCount"></output>
 
-    <span>File size:&nbsp;</span>
+    <label for="fileSize">File size:&nbsp;</label>
     <output id="fileSize"></output>
   </div>
 </template>
