Reset tempo when module loaded

--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -1,7 +1,7 @@
 <template id="samplesList">
   <div class="vflex flex-grow">
     <div class="hflex">
-      <select id="sampleSelect" class="flex-grow"></select>
+      <select id="sampleSelect" class="flex-grow" autocomplete="off"></select>
       <button id="addSample">
         <img class="icon" src="assets/plus.svg">
       </button>
