Loop repeat command

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -63,6 +63,7 @@
         <option selected disabled hidden>Loop</option>
         <option value="set">Set</option>
         <option value="clear">Clear</option>
+        <option value="repeat">Repeat</option>
       </select>
       <select id="effectMenu">
         <option selected disabled hidden>Effect</option>
