--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -46,26 +46,27 @@
       <input id="loopEnd" type="range" min="0" autocomplete="off">
     </div>
     <div class="hflex">
-      <select id="selectMenu">
+      <select id="selectMenu" class="sample-edit-menu">
         <option selected disabled hidden>Select</option>
         <option value="all">All</option>
         <option value="none">None</option>
         <option value="loop">Loop</option>
       </select>
-      <select id="editMenu">
+      <select id="editMenu" class="sample-edit-menu">
         <option selected disabled hidden>Edit</option>
         <option value="trim">Trim</option>
         <option value="cut">Cut</option>
         <option value="copy">Copy</option>
         <option value="paste">Paste</option>
       </select>
-      <select id="loopMenu">
+      <select id="loopMenu" class="sample-edit-menu">
         <option selected disabled hidden>Loop</option>
         <option value="set">Set</option>
         <option value="clear">Clear</option>
         <option value="repeat">Repeat</option>
+        <option value="pingpong">Ping-Pong</option>
       </select>
-      <select id="effectMenu">
+      <select id="effectMenu" class="sample-edit-menu">
         <option selected disabled hidden>Effect</option>
         <option value="amplify">Amplify</option>
         <option value="fadeIn">Fade In</option>
