--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -11,14 +11,19 @@
       <img class="icon" src="assets/download.svg">
     </button>
     <div class="flex-grow"></div>
-    <select id="demoMenu">
+    <select id="demoMenu" class="large-menu">
       <option selected disabled hidden>Demo Files</option>
-      <option value="https://chroma.zone/share/space_debris.mod">space debris</option>
-      <option value="https://chroma.zone/share/migraine.mod">migraine</option>
-      <option value="https://chroma.zone/share/sammie-n_dropthefunk.mod">sammie-n dropthefunk</option>
-      <option value="https://chroma.zone/share/GSLINGER.MOD">GSLINGER</option>
-      <option value="https://chroma.zone/share/aceman_-_homunculi.mod">aceman - homunculi</option>
-      <option value="https://chroma.zone/share/celsius_-_too_fast.mod">celsius - too_fast</option>
+      <optgroup label="Modules">
+        <option value="https://chroma.zone/share/space_debris.mod">space debris</option>
+        <option value="https://chroma.zone/share/migraine.mod">migraine</option>
+        <option value="https://chroma.zone/share/sammie-n_dropthefunk.mod">sammie-n dropthefunk</option>
+        <option value="https://chroma.zone/share/GSLINGER.MOD">GSLINGER</option>
+        <option value="https://chroma.zone/share/aceman_-_homunculi.mod">aceman - homunculi</option>
+        <option value="https://chroma.zone/share/celsius_-_too_fast.mod">celsius - too fast</option>
+      </optgroup>
+      <optgroup label="Samples">
+        <option value="https://chroma.zone/share/pixipack1.mod">pixipack 1</option>
+      </optgroup>
     </select>
   </div>
 </template>
