--- a/templates/PlaybackControls.html
+++ b/templates/PlaybackControls.html
@@ -9,7 +9,7 @@
     <button id="playRow">
       <img class="icon" src="assets/play.svg">
     </button>
-    <button id="pause" class="hide">
+    <button id="pause" class="hide show-checked">
       <img class="icon" src="assets/pause.svg">
     </button>
     <label class="label-button">
