Inline SVG element

--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -10,10 +10,10 @@
       <output id="channelCount"></output>
       &nbsp;
       <button id="delChannels">
-        <img class="icon" src="assets/minus.svg">
+        <inline-svg class="icon" src="minus.svg"></inline-svg>
       </button>
       <button id="addChannels">
-        <img class="icon" src="assets/plus.svg">
+        <inline-svg class="icon" src="plus.svg"></inline-svg>
       </button>
     </div>
 
@@ -25,7 +25,7 @@
       <output id="patternCount"></output>
       &nbsp;
       <button id="patternZap">
-        <img class="icon" src="assets/playlist-remove.svg">
+        <inline-svg class="icon" src="playlist-remove.svg"></inline-svg>
       </button>
     </div>
 
