--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -22,7 +22,7 @@
       <div class="hflex">
         <label class="label-button">
           <input id="file" type="file" accept="audio/*" autocomplete="off">
-          <span><img class="icon" src="assets/folder-open.svg"></span>
+          <span><inline-svg class="icon" src="folder-open.svg"></inline-svg></span>
         </label>
         &nbsp;
         <label for="sampleRate">Resample:&nbsp;</label>
