--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -2,7 +2,7 @@
   <div class="vflex">
     <div class="hflex">
       <button id="lift">
-        <img class="icon" src="assets/eyedropper.svg">
+        <inline-svg class="icon" src="eyedropper.svg"></inline-svg>
       </button>
       <div class="flex-grow"></div>
       <span id="entryCell" class="pattern-cell">
@@ -12,16 +12,16 @@
       </span>
       <div class="flex-grow"></div>
       <button id="write">
-        <img class="icon" src="assets/pencil.svg">
+        <inline-svg class="icon" src="pencil.svg"></inline-svg>
       </button>
       <button id="clear">
-        <img class="icon" src="assets/eraser.svg">
+        <inline-svg class="icon" src="eraser.svg"></inline-svg>
       </button>
       <button id="insert">
-        <img class="icon" src="assets/arrow-expand-down.svg">
+        <inline-svg class="icon" src="arrow-expand-down.svg"></inline-svg>
       </button>
       <button id="delete">
-        <img class="icon" src="assets/backspace-reverse-outline.svg">
+        <inline-svg class="icon" src="backspace-reverse-outline.svg"></inline-svg>
       </button>
     </div>
     <div class="properties-grid">
@@ -112,7 +112,7 @@
 
         <div class="flex-grow"></div>
         <button id="writeEffect">
-          <img class="icon" src="assets/keyboard-return.svg">
+          <inline-svg class="icon" src="keyboard-return.svg"></inline-svg>
         </button>
       </div>
     </div>
