--- a/templates/FileToolbar.html
+++ b/templates/FileToolbar.html
@@ -1,14 +1,14 @@
 <template id="fileToolbar">
   <div class="hflex">
     <button id="newModule">
-      <img class="icon" src="assets/file-plus-outline.svg">
+      <inline-svg class="icon" src="file-plus-outline.svg"></inline-svg>
     </button>
     <label class="label-button">
       <input id="fileSelect" type="file" autocomplete="off">
-      <span><img class="icon" src="assets/folder-open.svg"></span>
+      <span><inline-svg class="icon" src="folder-open.svg"></inline-svg></span>
     </label>
     <button id="fileSave">
-      <img class="icon" src="assets/download.svg">
+      <inline-svg class="icon" src="download.svg"></inline-svg>
     </button>
     <div class="flex-grow"></div>
     <select id="demoMenu" class="large-menu">
