--- a/templates/SamplesList.html
+++ b/templates/SamplesList.html
@@ -3,10 +3,10 @@
     <div class="hflex">
       <select id="sampleSelect" class="flex-grow" autocomplete="off"></select>
       <button id="addSample">
-        <img class="icon" src="assets/plus.svg">
+        <inline-svg class="icon" src="plus.svg"></inline-svg>
       </button>
       <button id="delSample">
-        <img class="icon" src="assets/close.svg">
+        <inline-svg class="icon" src="close.svg"></inline-svg>
       </button>
     </div>
     <div class="vspace"></div>
